fixed: crab overlaps status bar on tablets

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -34,54 +34,11 @@ body {
 
 /* Game Screen
 ---------------------------------------------*/
-
-#game-screen {
-    width: 100vw;
-    height: 100vh;
-    background-image: url("../img/beach-sand-pattern-5s.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-#score-label {
-    position: absolute;
-    font-family: Verdana, sans-serif;
-    font-size: 2rem;
-    color: white;
-    margin: 1rem;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    z-index: 2;
-}
-
-#svg-wrap {
-    padding: 2rem;
-    position: absolute;
-    /* center the crab vertically, within the svg-wrap div */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    /* to animate crab movement, use top or left.  50% is region 2 */
-}
-
-#svg-crab {
-    width: 100%;
-    height: 100%;
-    filter: drop-shadow(5px 7px 3px rgba(0, 0, 0, 0.4));
-}
-
-#hitbox {
-    width: 100%;
-}
-
 /* portrait */
 @media screen and (max-aspect-ratio: 1/1) {
     #svg-wrap {
         width: 100%;
-        height: 50%;
+        height: calc(50% - 20px);
     }
     
     .region1 {
@@ -89,7 +46,7 @@ body {
     }
 
     .region2 {
-        top: 50%;
+        top: calc(50% - 20px);
     }
 
     .visible {
@@ -131,6 +88,66 @@ body {
     .hidden {
         display: none;
     }
+}
+
+#game-screen {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("../img/beach-sand-pattern-5s.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#score-label {
+    position: absolute;
+    margin: 1rem;
+    
+    font-family: Verdana, sans-serif;
+    font-size: 2rem;
+    color: white;
+    z-index: 2;
+    
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+#svg-wrap {
+    position: absolute;
+    padding: 2rem;
+    /* center the crab vertically, within the svg-wrap div */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    /* to animate crab movement, use top or left.  50% is region 2 */
+}
+
+#svg-crab {
+    width: 100%;
+    height: 100%;
+    filter: drop-shadow(5px 7px 3px rgba(0, 0, 0, 0.4));
+}
+
+#hitbox {
+    width: 100%;
+}
+
+#status-bar {
+    position: absolute;
+    bottom: 0;
+    height: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: black;
+    
+    font-family: Verdana, sans-serif;
+    font-size: 1.5rem;
+    color: white;
 }
 
 /* Game Over Screen
